--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -12,6 +12,35 @@
   width: 100vw;
 }
 
+.nav-box {
+  background-color: transparent;
+  width: 0px;
+  height: 60px;
+  position: absolute;
+  right:20px;
+  top: 15px;
+  z-index: 20;
+}
+
+.nav {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: -100%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+    transition: all 0.3s ease-out;
+    transform: scale(0);
+  }
+
+.links ul {
+    display: block;
+    margin: auto;
+    padding: 0px;
+  }
+
 #toggle {
   display: none;
 }
@@ -27,17 +56,17 @@
 
 .hamburger div {
   position: relative;
-  width: 35px;
+  width: 30px;
   height: 4px;
   border-radius: 3px;
   background-color: black;
-  margin-top: 5px;
+  margin-top: 6px;
   transition: all 0.3s ease-in-out;
 }
 
 #toggle:checked + .hamburger .top-bun {
-  transform: rotate(-45deg);
-  margin-top: 20px;
+    transform: rotate(-45deg);
+    margin-top: 20px;
 }
 
 #toggle:checked + .hamburger .bottom-bun {
@@ -50,11 +79,7 @@
   margin-top: -4px;
 }
 
-#toggle:checked + .hamburger + .nav-mobile {
-  top: 0;
+#toggle:checked + .hamburger + .nav {
   transform: scale(1);
-}
-
-#toggle:checked + .hamburger {
-  position: fixed;
+  top: 0;
 }
