--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -17,29 +17,84 @@
   width: 0px;
   height: 60px;
   position: absolute;
-  right:20px;
+  right: 20px;
   top: 15px;
   z-index: 20;
 }
 
 .nav {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: -100%;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    overflow: hidden;
-    transition: all 0.3s ease-out;
-    transform: scale(0);
-  }
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: -100%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  transition: all 0.3s ease-out;
+  transform: scale(0);
+}
+
+.nav-wrapper {
+  position: relative;
+  overflow: hidden;
+  overflow-y: auto;
+  height: 100%;
+}
+
+.links {
+  text-align: right;
+  padding: 20px 60px 0px 80px;
+  height: 400px;
+}
+
+.links a,
+.btn {
+  position: relative;
+  text-decoration: none;
+  color: black;
+  font-size: 2em;
+  display: inline-block;
+  margin-top: 20px;
+  transition: color 0.3s ease-in-out;
+  letter-spacing: 1px;
+}
+
+.links a:before {
+  content: "";
+  height: 0;
+  position: absolute;
+  width: 0.25em;
+  left: -0.5em;
+  transition: all 0.3s ease-in-out;
+}
+
+.links a:hover,
+.links .btn:hover {
+  color: white;
+  cursor: pointer;
+}
+
+.links a:hover:before {
+  height: 100%;
+}
+
+.links .btn {
+  border: none;
+  background: transparent;
+}
 
 .links ul {
-    display: block;
-    margin: auto;
-    padding: 0px;
-  }
+  position: relative;
+  display: block;
+  margin: auto;
+  padding: 0px;
+  top: 40px;
+}
+
+.links li::marker {
+  color: transparent;
+}
 
 #toggle {
   display: none;
@@ -65,8 +120,8 @@
 }
 
 #toggle:checked + .hamburger .top-bun {
-    transform: rotate(-45deg);
-    margin-top: 20px;
+  transform: rotate(-45deg);
+  margin-top: 20px;
 }
 
 #toggle:checked + .hamburger .bottom-bun {
