--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,16 +1,16 @@
 * {
-  font-family: "Open Sans", sans-serif;
-  margin: 0 0;
+    font-family: 'Open Sans', sans-serif;
+    margin: 0 0;
 }
 
 .home {
   display: flex;
   justify-content: center;
+  display: inline;
 }
 
 .homebackground {
     width: 100%;
-    position: absolute;
 }
 
 .nav-box {
@@ -27,9 +27,9 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  top: -100%;
-  left: 0;
-  right: 0;
+  /* top: -100%; */
+  /* left: 150%; */
+  right: -100%;
   bottom: 0;
   overflow: hidden;
   transition: all 0.3s ease-out;
@@ -53,7 +53,7 @@
 .btn {
   position: relative;
   text-decoration: none;
-  color: black;
+  color: #302C28;
   font-size: 2em;
   display: inline-block;
   margin-top: 20px;
@@ -66,7 +66,7 @@
   height: 0;
   position: absolute;
   width: 0.25em;
-  left: -0.5em;
+  right: 20px;
   transition: all 0.3s ease-in-out;
 }
 
@@ -93,6 +93,10 @@
   top: 40px;
 }
 
+.links li {
+padding-top: 70px;
+}
+
 .links li::marker {
   color: transparent;
 }
@@ -115,7 +119,7 @@
   width: 30px;
   height: 4px;
   border-radius: 3px;
-  background-color: black;
+  background-color: #302C28;
   margin-top: 6px;
   transition: all 0.3s ease-in-out;
 }
@@ -138,4 +142,32 @@
 #toggle:checked + .hamburger + .nav {
   transform: scale(1);
   top: 0;
+  right: 0;
+}
+
+.title {
+    position: fixed;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.heroTitle {
+    color: #302C28;
+    font-size: 6.5em;
+    font-weight: 100;
+    font-family: 'Yellowtail';
+}
+
+.subTitle {
+    position: fixed;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.subHeroTitle {
+    color: #302C28;
+    font-size: 2.7em;
+    font-weight: 100;
 }
